# contak-service

./: .env-sample  .flake8  README.md  manage.py  mypy.ini  pyproject.toml  schema.json
contak/: admin.py  apps.py  models.py  schema.py  serializers.py  urls.py  views.py
contak/auth/: mutations.py  queries.py
contak/graphql/: mutations.py  object_types.py  queries.py
contak/migrations/: 0001_initial.py
contak/tests/: factories.py
contak/tests/graphql/: graphql_test_case.py
contak/tests/graphql/queries/: test_current_user.py  test_my_contacts.py
server/: urls.py
server/settings/: base.py
webhooks/: urls.py  views.py
