[tool.poetry]
name = "contak-service"
version = "0.0.1"
description = "Demo Django service for managing contacts."
authors = ["Niels Godfredsen <ngodfredsen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
django-configurations = "^2.2"
python-dotenv = "^0.15.0"
graphene-django = "^2.15.0"
psycopg2 = "^2.8.6"
django-extensions = "^3.1.0"
django-click = "^2.2.0"
requests = "^2.25.1"
djangorestframework = "^3.12.2"
Pygments = "^2.7.4"
Markdown = "^3.3.3"
django-filter = "^2.4.0"
PyJWT = "1.7.1"
django-graphql-jwt = "^0.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.800"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
